--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="author" content="John Greer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🏆 John Greer - Resume</title>
+
+  <link rel="stylesheet" href="css/styles.css">
+  
 </head>
 
 <body>
